# tennis

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  tennis.py
tennis/: __init__.py  auth.py  payments.py  responses.py  scheduler.py
